@@ -38,6 +38,10 @@ namespace RCT1
     std::string_view GetVehicleObject(uint8_t vehicleType);
     std::string_view GetSmallSceneryObject(uint8_t smallSceneryType);
     std::string_view GetLargeSceneryObject(uint8_t largeSceneryType);
+    /**
+     * Most sloped gates look like their ungated counterpart. This function maps these gates.
+     */
+    int32_t MapSlopedWall(uint8_t wallType);
     std::string_view GetWallObject(uint8_t wallType);
     std::string_view GetPathSurfaceObject(uint8_t pathType);
     std::string_view GetPathAddtionObject(uint8_t pathAdditionType);
